<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RequestActivity">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="casual"
        android:text="@string/fill_the_form_to_complete_your_request"
        android:textColor="@color/red"

        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/BloodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:text="@string/blood_type" />

        <Spinner
            android:id="@+id/BloodType1"
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <Spinner
            android:id="@+id/BloodType2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"

        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:background="@drawable/style"
        android:ems="7"
        android:hint="@string/amount_in_ml"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reason"
        tools:layout_editor_absoluteX="81dp" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/reason_for_your_request"
        android:textColor="@color/red"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BloodType" />

    <EditText
        android:id="@+id/reason"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/style"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/explain_the_medical_condition_that_require_blood_and_if_the_blood_is_not_for_you_provide_the_information_about_the_person_that_will_recive_the_blood_in_more_than_100_word"
        android:importantForAutofill="no"
        android:inputType="text|textMultiLine"
        android:textStyle="bold"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text4" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/i_agree_to_share_my_profile_data_with_this_organization"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="339dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/style_button"
        android:text="@string/send_request"
        android:textColor="@color/white"
        app:backgroundTint='#B31217'
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox" />

</androidx.constraintlayout.widget.ConstraintLayout>